--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="id">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/appLogo64.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#151a2c" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PUBG Mobile Tournament App"
     />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/appLogo192.png" />
